--- a/main.tex
+++ b/main.tex
@@ -97,6 +97,7 @@ that are not captured by it.
 \subsubsection{Scope:}
 \label{subsubsec:ont-factor-scope}
 
+\citep{mascardi2007ComparisonUpperOntologies}
 \citep{noy2001OntologyDevelopment101}
 
 \subsubsection{Metrics:}
