--- a/main.tex
+++ b/main.tex
@@ -97,6 +97,11 @@ that are not captured by it.
 \subsubsection{Scope:}
 \label{subsubsec:ont-factor-scope}
 
+Ontologies can be upper-level or top ontologies that defined abstractions
+enabling integration of heterogeneous knowledge of different domains or of
+particular domains e.g. genetics for the Gene Ontology
+\cite{ashburner2000GeneOntologyTool} 
+
 \citep{mascardi2007ComparisonUpperOntologies}
 \citep{noy2001OntologyDevelopment101}
 
