--- a/main.tex
+++ b/main.tex
@@ -96,13 +96,11 @@ that are not captured by it.
 
 \subsubsection{Scope:}
 \label{subsubsec:ont-factor-scope}
-
+The scope of an ontology defines the level of specificity of its entities.
 Ontologies can be upper-level or top ontologies that defined abstractions
-enabling integration of heterogeneous knowledge of different domains or of
-particular domains e.g. genetics for the Gene Ontology
-\cite{ashburner2000GeneOntologyTool} 
-
-\citep{mascardi2007ComparisonUpperOntologies}
+enabling integration of heterogeneous knowledge across different domains
+\citep{mascardi2007ComparisonUpperOntologies} or of particular domains itself
+e.g. genetics for the Gene Ontology \cite{ashburner2000GeneOntologyTool}.
 \citep{noy2001OntologyDevelopment101}
 
 \subsubsection{Metrics:}
