--- a/main.tex
+++ b/main.tex
@@ -96,7 +96,8 @@ that are not captured by it.
 
 \subsubsection{Scope:}
 \label{subsubsec:ont-factor-scope}
-The scope of an ontology defines the level of specificity of its entities.
+The scope of an ontology defines the level of specificity and abstraction of
+its entities.
 Ontologies can be upper-level or top ontologies that defined abstractions
 enabling integration of heterogeneous knowledge across different domains
 \citep{mascardi2007ComparisonUpperOntologies} or of particular domains itself
