--- a/main.tex
+++ b/main.tex
@@ -97,12 +97,11 @@ that are not captured by it.
 \subsubsection{Scope:}
 \label{subsubsec:ont-factor-scope}
 The scope of an ontology defines the level of specificity and abstraction of
-its entities.
-Ontologies can be upper-level or top ontologies that defined abstractions
-enabling integration of heterogeneous knowledge across different domains
-\citep{mascardi2007ComparisonUpperOntologies} or of particular domains itself
-e.g. genetics for the Gene Ontology \cite{ashburner2000GeneOntologyTool}.
-\citep{noy2001OntologyDevelopment101}
+its entities.  Ontologies can be \textbf{upper-level} or top ontologies that
+defined abstractions enabling integration of heterogeneous knowledge across
+different domains \citep{mascardi2007ComparisonUpperOntologies} or of
+particular \textbf{domains} itself e.g. genetics for the Gene Ontology
+\cite{ashburner2000GeneOntologyTool}.  \citep{noy2001OntologyDevelopment101}
 
 \subsubsection{Metrics:}
 \label{subsubsec:ont-factor-metrics}
