--- a/main.tex
+++ b/main.tex
@@ -98,11 +98,13 @@ that are not captured by it.
 \label{subsubsec:ont-factor-scope}
 The scope of an ontology defines the level of specificity and abstraction of
 its entities. Ontologies can be \textbf{upper-level} or top ontologies that
-defined abstractions enabling integration of heterogeneous knowledge across
+define abstractions enabling integration of heterogeneous knowledge across
 different domains \citep{mascardi2007ComparisonUpperOntologies} or of a
 particular \textbf{domains} itself e.g. genetics for the Gene Ontology
 \cite{ashburner2000GeneOntologyTool}. Domain ontologies are often designed
-using the entity classifications provided by an upper ontology. \citep{noy2001OntologyDevelopment101}
+using the entity classifications provided by an upper ontology.
+% Statement about what 
+\citep{noy2001OntologyDevelopment101}
 
 \subsubsection{Metrics:}
 \label{subsubsec:ont-factor-metrics}
