--- a/main.tex
+++ b/main.tex
@@ -100,7 +100,7 @@ The scope of an ontology defines the level of specificity and abstraction of
 its entities. Ontologies can be \textbf{upper-level} or top ontologies that
 define abstractions enabling integration of heterogeneous knowledge across
 different domains \citep{mascardi2007ComparisonUpperOntologies} or of a
-particular \textbf{domains} itself e.g. genetics for the Gene Ontology
+particular \textbf{domains} itself e.g. the Gene Ontology
 \cite{ashburner2000GeneOntologyTool}. Domain ontologies are often designed
 using the entity classifications provided by an upper ontology.
 % Statement about what 
