--- a/main.tex
+++ b/main.tex
@@ -101,8 +101,8 @@ its entities. Ontologies can be \textbf{upper-level} or top ontologies that
 define abstractions enabling integration of heterogeneous knowledge across
 different domains \citep{mascardi2007ComparisonUpperOntologies} or of a
 particular \textbf{domains} itself e.g. the Gene Ontology (GO)
-\cite{ashburner2000GeneOntologyTool}. Domain ontologies are often designed
-using the entity classifications provided by an upper ontology.
+\cite{ashburner2000GeneOntologyTool} designed using the principles provided by
+an upper ontology.
 % Statement about what 
 \citep{noy2001OntologyDevelopment101}
 
