--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,7 @@ Ontologies vary greatly depending on the complexities of the modeled domain
 and the design choices taken by ontology engineers and domain experts. Our
 categorization of ontology factors draws inspiration from the Ontology Layer
 Cake \citep{gangemi2005OntologyEvaluationValidation} with additional factors
-that are not captured by it. 
+that are not captured by it. We explain the 
 
 \subsubsection{Scope:}
 \label{subsubsec:ont-factor-scope}
@@ -103,7 +103,6 @@ different domains \citep{mascardi2007ComparisonUpperOntologies} or of a
 particular \textbf{domain} itself e.g. the Gene Ontology (GO)
 \cite{ashburner2000GeneOntologyTool} designed using the principles provided by
 an upper ontology.
-% Statement about what 
 \citep{noy2001OntologyDevelopment101}
 
 \subsubsection{Metrics:}
@@ -169,6 +168,9 @@ population. \chcomment[id=UB]{Rewrite paragraph}
 
 \subsection{LLM Factors}
 \label{subsec:llm-factors}
+
+\subsection{Interplay of Factors}
+\label{subsec:factor-interplay}
 
 \bibliography{bibliography}
 \end{document}
