--- a/main.tex
+++ b/main.tex
@@ -99,10 +99,10 @@ ontology population
 \subsubsection{Scope:}
 \label{subsubsec:ont-factor-scope}
 The scope of an ontology defines the level of specificity and abstraction of
-its entities. Ontologies can be \textbf{upper-level} or top ontologies that
-define abstractions enabling integration of heterogeneous knowledge across
-different domains \citep{mascardi2007ComparisonUpperOntologies} or of a
-particular \textbf{domain} itself e.g. the Gene Ontology (GO)
+its entities. Ontologies can be \textbf{upper-level} that define abstractions
+enabling integration of heterogeneous knowledge across different domains
+\citep{mascardi2007ComparisonUpperOntologies} or of a particular
+\textbf{domain} itself e.g. the Gene Ontology (GO)
 \cite{ashburner2000GeneOntologyTool} designed using the principles provided by
 an upper ontology.
 \citep{noy2001OntologyDevelopment101}
