--- a/main.tex
+++ b/main.tex
@@ -91,8 +91,8 @@ study} \label{fig:variation-overview}
 Ontologies vary greatly depending on the complexities of the modeled domain
 and the design choices taken by ontology engineers and domain experts. Our
 categorization of ontology factors draws inspiration from the Ontology Layer
-Cake \citep{gangemi2005OntologyEvaluationValidation} with additional factors
-that are not captured by it. The choice of factors is governed by the
+Cake \citep{gangemi2005OntologyEvaluationValidation} with additional included
+factors that are not captured by it. The choice of factors is governed by the
 relevance of the factor and the influence it provides when using LLMs for
 ontology population
 
