--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@ categorization of ontology factors draws inspiration from the Ontology Layer
 Cake \citep{gangemi2005OntologyEvaluationValidation} with additional included
 factors that are not captured by it. The choice of factors is governed by the
 relevance of the factor and the influence it provides when using LLMs for
-ontology population
+ontology population.
 
 \subsubsection{Scope:}
 \label{subsubsec:ont-factor-scope}
