--- a/main.tex
+++ b/main.tex
@@ -89,9 +89,10 @@ study} \label{fig:variation-overview}
 \label{subsec:ontology-factors}
 
 Ontologies vary greatly depending on the complexities of the modeled domain
-and the design choices taken by ontology engineers and domain experts. Our
-categorization of ontology factors draws inspiration from the Ontology Layer
-Cake \citep{gangemi2005OntologyEvaluationValidation} with additional included
+and the design choices taken by ontology engineers and domain experts . Our
+\citep{noy2001OntologyDevelopment101} categorization of ontology factors draws
+inspiration from the Ontology Layer Cake
+\citep{gangemi2005OntologyEvaluationValidation} with additional included
 factors that are not captured by it. The choice of factors is governed by the
 relevance of the factor and the influence it provides when using LLMs for
 ontology population.
@@ -106,7 +107,6 @@ domains \citep{mascardi2007ComparisonUpperOntologies} or of a particular
 \textbf{domain} itself e.g. the Gene Ontology (GO)
 \cite{ashburner2000GeneOntologyTool} designed using the principles provided by
 an upper ontology.
-\citep{noy2001OntologyDevelopment101}
 
 \subsubsection{Metrics:}
 \label{subsubsec:ont-factor-metrics}
