--- a/main.tex
+++ b/main.tex
@@ -73,8 +73,8 @@ The abstract should briefly summarize the contents of the paper in
 \label{sec:factors}
 
 The factors governing LLM-supported ontology population can be categorized
-into two groups: Ontology factors and LLM factors. Here, we discuss the
-relevant factors for each group and those we investigate through our
+into two groups: Ontology factors and LLM factors. We provide an overview of
+the relevant factors for each group and those we investigate through our
 experimentation. Figure \ref{fig:variation-overview} provides an overview of
 the factors of each group.
 
