--- a/main.tex
+++ b/main.tex
@@ -74,9 +74,9 @@ The abstract should briefly summarize the contents of the paper in
 
 The factors governing LLM-supported ontology population can be categorized
 into two groups: Ontology factors and LLM factors. We provide an overview of
-the relevant factors for each group and the factors we investigate through our
-experimentation. Figure \ref{fig:variation-overview} provides an overview of
-the factors of each group.
+the relevant factors for each group, highlighting their relevance in
+LLM-supported ontology population. Figure \ref{fig:variation-overview}
+provides an overview of the factors of each group.
 
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{assets/factor-overview.drawio.pdf}
