--- a/main.tex
+++ b/main.tex
@@ -93,9 +93,7 @@ and the design choices taken by ontology engineers and domain experts . Our
 \citep{noy2001OntologyDevelopment101} categorization of ontology factors draws
 inspiration from the Ontology Layer Cake
 \citep{gangemi2005OntologyEvaluationValidation} with additional included
-factors that are not captured by it. The choice of factors is governed by the
-relevance of the factor and the influence it provides when using LLMs for
-ontology population.
+factors that are not captured by it.
 
 \subsubsection{Scope:}
 \label{subsubsec:ont-factor-scope}
