--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,9 @@ abstractions enabling integration of heterogeneous knowledge across different
 domains \citep{mascardi2007ComparisonUpperOntologies} or of a particular
 \textbf{domain} itself e.g. the Gene Ontology (GO)
 \cite{ashburner2000GeneOntologyTool} designed using the principles provided by
-an upper ontology.
+an upper ontology. As upper ontologies are supposed to be general enough to
+encompass ontologies of varying domains, they challenge LLMs to extract and
+understand representative abstractions from text data
 
 \subsubsection{Metrics:}
 \label{subsubsec:ont-factor-metrics}
