--- a/main.tex
+++ b/main.tex
@@ -108,6 +108,11 @@ an upper ontology. As upper ontologies are supposed to be general enough to
 encompass ontologies of varying domains, they challenge LLMs to extract and
 understand representative abstractions from text data
 
+The scope of ontologies test the semantic abilities of LLMs. Upper ontologies
+challenge LLMs to understand abstractions effectively requiring them to
+extract the ontological semantics of entities. Domain ontologies require LLMs
+to more directly apply their 'understanding' of entities.
+
 \subsubsection{Metrics:}
 \label{subsubsec:ont-factor-metrics}
 
