--- a/main.tex
+++ b/main.tex
@@ -99,9 +99,10 @@ factors that are not captured by it.
 \label{subsubsec:ont-factor-scope}
 
 The scope of an ontology defines the level of specificity and abstraction of
-its entities. Ontologies can be \textbf{upper-level} ontologies that define
-abstractions enabling integration of heterogeneous knowledge across different
-domains \citep{mascardi2007ComparisonUpperOntologies} or of a particular
+its entities and its structural design. Ontologies can be \textbf{upper-level}
+ontologies that define abstractions enabling integration of heterogeneous
+knowledge across different domains
+\citep{mascardi2007ComparisonUpperOntologies} or of a particular
 \textbf{domain} itself e.g. the Gene Ontology (GO)
 \cite{ashburner2000GeneOntologyTool} designed using the principles provided by
 an upper ontology. The scope of ontologies test the semantic abilities of
