--- a/main.tex
+++ b/main.tex
@@ -107,7 +107,7 @@ knowledge across different domains
 \cite{ashburner2000GeneOntologyTool} designed using the principles provided by
 an upper ontology. The scope of ontologies test the semantic abilities of
 LLMs. Upper ontologies challenge LLMs to understand abstractions effectively
-requiring them to extract the ontological semantics of entities. Domain
+requiring them to extract the ontological semantics of entities whereas domain
 ontologies require LLMs to more directly apply their 'understanding' of
 entities.
 
