--- a/main.tex
+++ b/main.tex
@@ -109,7 +109,9 @@ an upper ontology. The scope of ontologies test the semantic abilities of
 LLMs. Upper ontologies challenge LLMs to understand abstractions effectively
 requiring them to extract the ontological semantics of entities whereas domain
 ontologies require LLMs to more directly apply their 'understanding' of
-entities.
+entities. The former requires LLMs to 'take a step back' from the actual
+content and recognize general patterns while the latter requires understanding
+patterns based on the content itself.
 
 \subsubsection{Metrics:}
 \label{subsubsec:ont-factor-metrics}
