--- a/main.tex
+++ b/main.tex
@@ -119,8 +119,8 @@ patterns based on the content itself.
 % Overall
 
 \citet{hlomani2014ApproachesMethodsMetrics} highlight several metrics for
-evaluating ontologies. Their categorization of ontology metrics as \textbf{structural}
-and \textbf{functional} facilitates evaluating
+evaluating ontologies. Their categorization of ontology metrics as
+\textbf{structural} and \textbf{functional} facilitates evaluating
 
 % Structure
 
