--- a/main.tex
+++ b/main.tex
@@ -118,9 +118,9 @@ patterns based on the content itself.
 
 % Overall
 
-\citet{hlomani2014ApproachesMethodsMetrics} highlight several metrics for
-evaluating ontologies. Their categorization of ontology metrics as
-\textbf{structural} and \textbf{functional} facilitates evaluating
+\citet{hlomani2014ApproachesMethodsMetrics} highlight several
+\textbf{structural} and \textbf{functional} metrics for evaluating
+ontologies.
 
 % Structure
 
