--- a/main.tex
+++ b/main.tex
@@ -120,7 +120,8 @@ patterns based on the content itself.
 
 \citet{hlomani2014ApproachesMethodsMetrics} highlight several
 \textbf{structural} and \textbf{functional} metrics for evaluating
-ontologies.
+ontologies. Structural metrics evaluate the structural complexity of an
+ontology in terms of its size, breadth, depth
 
 % Structure
 
