--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,8 @@ patterns based on the content itself.
 \citet{hlomani2014ApproachesMethodsMetrics} highlight several
 \textbf{structural} and \textbf{functional} metrics for evaluating
 ontologies. Structural metrics evaluate the structural complexity of an
-ontology in terms of its size, breadth, depth
+ontology in terms of its size, breadth, depth and dispersion
+\citep{hlomani2014ApproachesMethodsMetrics} 
 
 % Structure
 
