--- a/main.tex
+++ b/main.tex
@@ -122,7 +122,7 @@ patterns based on the content itself.
 \textbf{structural} and \textbf{functional} metrics for evaluating
 ontologies. Structural metrics evaluate the structural complexity of an
 ontology in terms of its size, breadth, depth and dispersion
-\citep{hlomani2014ApproachesMethodsMetrics} 
+\citep{hlomani2014ApproachesMethodsMetrics}.
 
 % Structure
 
