--- a/main.tex
+++ b/main.tex
@@ -120,8 +120,12 @@ patterns based on the content itself.
 
 \citet{hlomani2014ApproachesMethodsMetrics} highlight several
 \textbf{structural} and \textbf{functional} metrics for evaluating
-ontologies. Structural metrics evaluate the structural complexity of an
-ontology in terms of its size, breadth, depth and dispersion
+ontologies.
+\begin{itemize}
+  \item Structural metrics evaluate the structural complexity of an
+    ontology in terms of its size, breadth, depth and dispersion
+  \item Functional
+\end{itemize}
 \citep{hlomani2014ApproachesMethodsMetrics}.
 
 % Structure
