--- a/main.tex
+++ b/main.tex
@@ -124,9 +124,10 @@ ontologies.
 \begin{itemize}
   \item Structural metrics evaluate the structural complexity of an
     ontology in terms of its size, breadth, depth and dispersion
+    \citep{hlomani2014ApproachesMethodsMetrics}. 
+    complexity of an ontology 
   \item Functional
 \end{itemize}
-\citep{hlomani2014ApproachesMethodsMetrics}.
 
 % Structure
 
