--- a/main.tex
+++ b/main.tex
@@ -122,10 +122,14 @@ patterns based on the content itself.
 \textbf{structural} and \textbf{functional} metrics for evaluating
 ontologies.
 \begin{itemize}
-  \item Structural metrics evaluate the structural complexity of an
-    ontology in terms of its size, breadth, depth and dispersion
-    \citep{hlomani2014ApproachesMethodsMetrics}. 
-    complexity of an ontology 
+  \item Structural metrics evaluate the structural complexity of an ontology
+    in terms of its size, breadth, depth and dispersion
+    \citep{hlomani2014ApproachesMethodsMetrics}. The structure of an ontology
+    highlights the semantics of the underlying domain or scope. The size of an
+    ontology in terms of its entity count is an indicator of the enormity of
+    its scope. Ontologies with large depth reflect domains with knowledge of
+high granularity while those with greater breadth and complexity of an
+ontology
   \item Functional
 \end{itemize}
 
