--- a/main.tex
+++ b/main.tex
@@ -127,9 +127,10 @@ ontologies.
   \citep{hlomani2014ApproachesMethodsMetrics}. The structure of an ontology
   highlights the semantics of the underlying domain or scope. The breadth and
   size of an ontology in terms of its entity count is an indicator of the
-  enormity of its scope. Ontologies with large depth reflect domains with
+  vastness of its scope. Ontologies with large depth reflect domains with
   knowledge of high granularity while those with greater dispersion represent
-  domains with several closely-related concepts (siblings)
+  domains with several closely-related concepts (siblings). Structural nuances
+  test the ability of LLMs to work with domains of varying enormity
   \item Functional
 \end{itemize}
 
