--- a/main.tex
+++ b/main.tex
@@ -130,7 +130,8 @@ ontologies.
   vastness of its scope. Ontologies with large depth reflect domains with
   knowledge of high granularity while those with greater dispersion represent
   domains with several closely-related concepts (siblings). Structural nuances
-  test the ability of LLMs to work with domains of varying enormity
+  test the ability of LLMs to work with domains of varying enormity and
+  relational complexity.
   \item Functional
 \end{itemize}
 
