--- a/main.tex
+++ b/main.tex
@@ -132,12 +132,8 @@ ontologies.
   domains with several closely-related concepts (siblings). Structural nuances
   test the ability of LLMs to work with domains of varying enormity and
   relational complexity.
-  \item Functional
-\end{itemize}
-
-% Structure
-
-% Functional
+  \item Functional 
+\end{itemize} Functional metrics 
 
 \subsubsection{Entity Labels}
 \label{subsubsec:ont-factor-entity-labels}
