--- a/main.tex
+++ b/main.tex
@@ -132,7 +132,13 @@ ontologies.
   domains with several closely-related concepts (siblings). Structural nuances
   test the ability of LLMs to identify and populate domains of varying
   enormity and relational complexity.
-  \item Functional 
+\item Functional measures test the intended use of an ontology
+  \citep{gangemi2005OntologyEvaluationValidation}. They evaluate the logical
+  consistency and comprehensiveness of an ontology as a specification of a
+  domain and its conceptualization. While these measures are approximations of
+  the effectiveness of the modelling of the domain, they highlight whether
+  functional ability of an ontology influences the ability of an LLM to
+  identify assertions.
 \end{itemize} Functional metrics 
 
 \subsubsection{Entity Labels}
