--- a/main.tex
+++ b/main.tex
@@ -137,7 +137,7 @@ ontologies.
   consistency and comprehensiveness of an ontology as a specification of a
   domain and its conceptualization. While these measures are approximations of
   the effectiveness of the modelling of the domain, they can help highlight
-  whether functional ability of an ontology influences the ability of an LLM
+  whether functional adequacy of an ontology influences the ability of an LLM
   to identify assertions. Measures likes completeness, conciseness, coverage
   and clarity provide q
 \end{itemize} Functional metrics 
