--- a/main.tex
+++ b/main.tex
@@ -138,7 +138,7 @@ ontologies.
   domain and its conceptualization. While these measures are approximations of
   the effectiveness of the modelling of the domain, they can help highlight
   whether functional adequacy of an ontology influences the ability of an LLM
-  to identify assertions. Measures likes completeness, conciseness, coverage
+  to identify its assertions. Measures likes completeness, conciseness, coverage
   and clarity provide q
 \end{itemize} Functional metrics 
 
