--- a/main.tex
+++ b/main.tex
@@ -135,11 +135,12 @@ ontologies.
 \item Functional measures test the intended use of an ontology
   \citep{gangemi2005OntologyEvaluationValidation}. They evaluate the logical
   consistency and comprehensiveness of an ontology as a specification of a
-  domain and its conceptualization. While these measures are approximations of
-  the effectiveness of the modelling of the domain, they can help highlight
-  whether functional adequacy of an ontology influences the ability of an LLM
-  to identify its assertions. Measures likes completeness, conciseness, coverage
-  and clarity provide q
+  domain and its conceptualization. Measures likes completeness, conciseness,
+  coverage and clarity \citep{hlomani2014ApproachesMethodsMetrics} provide
+  measures of the functional competency of an ontology in modelling its
+  domain.While these measures are approximations of the effectiveness of the
+  modelling of the domain, they can help highlight whether functional adequacy
+  of an ontology influences the ability of an LLM to identify its assertions.
 \end{itemize} Functional metrics 
 
 \subsubsection{Entity Labels}
