--- a/main.tex
+++ b/main.tex
@@ -141,7 +141,7 @@ ontologies.
   measures are approximations of the effectiveness of the modelling of the
   domain, they can help highlight whether functional adequacy of an ontology
   influences the ability of an LLM to identify its assertions.
-\end{itemize} Functional metrics 
+\end{itemize}
 
 \subsubsection{Entity Labels}
 \label{subsubsec:ont-factor-entity-labels}
