--- a/main.tex
+++ b/main.tex
@@ -146,6 +146,10 @@ ontologies.
 \subsubsection{Entity Labels}
 \label{subsubsec:ont-factor-entity-labels}
 
+The naming of entites in an ontology is largely governed by conventions
+followed in the domain of interest and by any upper ontologies used as
+reference. 
+
 \subsubsection{Taxonomy}
 \label{subsubsec:ont-factor-taxonomy}
 
