--- a/main.tex
+++ b/main.tex
@@ -148,7 +148,7 @@ ontologies.
 
 The naming of entites in an ontology is largely governed by conventions
 followed in the domain of interest and by any upper ontologies used as
-reference. However, the lexical and 
+reference.
 
 \subsubsection{Taxonomy}
 \label{subsubsec:ont-factor-taxonomy}
