--- a/main.tex
+++ b/main.tex
@@ -143,23 +143,27 @@ ontologies.
   influences the ability of an LLM to identify its assertions.
 \end{itemize}
 
-\subsubsection{Entity Labels}
+\subsubsection{Entity Labels:}
 \label{subsubsec:ont-factor-entity-labels}
 
 The naming of entites in an ontology is largely governed by conventions
 followed in the domain of interest and by any upper ontologies used as
-reference.
+reference. Through their pre-training, LLMs exhibit impressive natural
+language understanding and generation capabilities. The lexical semantics
+learnt by LLMs are known to exhibit impressive performance on tasks of sense
+distinction and semantic equivalence
+\citep{hayashi2025EvaluatingLlmsCapability,petersen2023LexicalSemanticsWith} 
 
-\subsubsection{Taxonomy}
+\subsubsection{Taxonomy:}
 \label{subsubsec:ont-factor-taxonomy}
 
-\subsubsection{Non-hierarchical Relations}
+\subsubsection{Non-hierarchical Relations:}
 \label{subsubsec:ont-factor-other-relations}
 
-\subsubsection{Attributes}
+\subsubsection{Attributes:}
 \label{subsubsec:ont-factor-attributes}
 
-\subsubsection{Axioms}
+\subsubsection{Axioms:}
 \label{subsubsec:ont-factor-axioms}
 
 \begin{itemize}
