--- a/main.tex
+++ b/main.tex
@@ -152,7 +152,9 @@ reference. Through their pre-training, LLMs exhibit impressive natural
 language understanding and generation capabilities. The lexical semantics
 learnt by LLMs are known to exhibit impressive performance on tasks of sense
 distinction and semantic equivalence
-\citep{hayashi2025EvaluatingLlmsCapability,petersen2023LexicalSemanticsWith} 
+\citep{hayashi2025EvaluatingLlmsCapability,petersen2023LexicalSemanticsWith}.
+In terms of ontology population, LLMs are required to apply their lexical
+sense of concept and individual labels to effectively identify assertions.
 
 \subsubsection{Taxonomy:}
 \label{subsubsec:ont-factor-taxonomy}
