--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,9 @@ learnt by LLMs are known to exhibit impressive performance on tasks of sense
 distinction and semantic equivalence
 \citep{hayashi2025EvaluatingLlmsCapability,petersen2023LexicalSemanticsWith}.
 In terms of ontology population, LLMs are required to apply their lexical
-sense of concept and individual labels to effectively identify assertions.
+sense of concept and individual labels to effectively identify
+assertions. Variation in entity label naming highlights the parity between the
+ontological semantics of the entities and the learnt lexical semantics of LLMs.
 
 \subsubsection{Taxonomy:}
 \label{subsubsec:ont-factor-taxonomy}
