--- a/main.tex
+++ b/main.tex
@@ -156,7 +156,9 @@ distinction and semantic equivalence
 In terms of ontology population, LLMs are required to apply their lexical
 sense of concept and individual labels to effectively identify
 assertions. Variation in entity label naming highlights the parity between the
-ontological semantics of the entities and the learnt lexical semantics of LLMs.
+ontological semantics of the entities and the learnt lexical semantics of
+LLMs. This parity is crucial for effective ontology population. In domains
+where labels  
 
 \subsubsection{Taxonomy:}
 \label{subsubsec:ont-factor-taxonomy}
