--- a/main.tex
+++ b/main.tex
@@ -157,8 +157,9 @@ In terms of ontology population, LLMs are required to apply their lexical
 sense of concept and individual labels to effectively identify
 assertions. Variation in entity label naming highlights the parity between the
 ontological semantics of the entities and the learnt lexical semantics of
-LLMs. This parity is crucial for effective ontology population. In domains
-where labels  
+LLMs. This parity is crucial for effective ontology population. As most LLMs
+employ subword tokenization like Byte Pair Encoding (BPE)
+\citep{sennrich2016NeuralMachineTranslation} to 
 
 \subsubsection{Taxonomy:}
 \label{subsubsec:ont-factor-taxonomy}
