--- a/main.tex
+++ b/main.tex
@@ -159,7 +159,10 @@ assertions. Variation in entity label naming highlights the parity between the
 ontological semantics of the entities and the learnt lexical semantics of
 LLMs. This parity is crucial for effective ontology population. As most LLMs
 employ subword tokenization like Byte Pair Encoding (BPE)
-\citep{sennrich2016NeuralMachineTranslation} to 
+\citep{sennrich2016NeuralMachineTranslation} for understanding prompts and
+generating texts, evaluation over entity labels highlights whether LLMs are
+able to effectively utilize lexical semantics or resort to more conventional
+string edit-distance-based senses for performing ontology population.
 
 \subsubsection{Taxonomy:}
 \label{subsubsec:ont-factor-taxonomy}
