--- a/main.tex
+++ b/main.tex
@@ -167,7 +167,8 @@ string edit-distance-based senses for performing ontology population.
 \subsubsection{Taxonomy:}
 \label{subsubsec:ont-factor-taxonomy}
 
-
+The taxonomy of an ontology is the pivotal backbone structure that defines the
+hierarchy of concepts in a domain.
 
 \subsubsection{Non-hierarchical Relations:}
 \label{subsubsec:ont-factor-other-relations}
