--- a/main.tex
+++ b/main.tex
@@ -168,7 +168,12 @@ string edit-distance-based senses for performing ontology population.
 \label{subsubsec:ont-factor-taxonomy}
 
 The taxonomy of an ontology is the pivotal backbone structure that defines the
-hierarchy of concepts in a domain.
+hierarchy of concepts in a domain. While ontology population is concerned
+primarily with indentifying instances for concepts, it requires understanding
+the granularity of the taxonomy to identify the correct concept for a new
+individual assertion. LLM-supported ontology population therefore investigates
+whether LLMs are capable of understanding the taxonomy of an ontology and how
+new individuals are to be placed within that taxonomy.
 
 \subsubsection{Non-hierarchical Relations:}
 \label{subsubsec:ont-factor-other-relations}
