--- a/main.tex
+++ b/main.tex
@@ -178,6 +178,16 @@ new individuals are to be placed within that taxonomy.
 \subsubsection{Non-hierarchical Relations:}
 \label{subsubsec:ont-factor-other-relations}
 
+Apart from hierarchical relations, ontologies possess a wide variety of other
+relations that describe other phenomena of a domain. Parthood, associative
+relations and attribute relation properties comprise a large part of
+ontological relations. Such relations add complexity to the task of ontology
+population, requiring care to avoid asserting new individuals with closely
+related concepts e.g. asserting `Red' as an instance of the concept `Wine' in
+the Wine Ontology \citep{noy2001OntologyDevelopment101} instead of an
+attribute value of `WineColor' that is associated with different classes with
+the relation `hasColor'.
+
 \subsubsection{Attributes:}
 \label{subsubsec:ont-factor-attributes}
 
