--- a/main.tex
+++ b/main.tex
@@ -186,7 +186,9 @@ population, requiring care to avoid asserting new individuals with closely
 related concepts e.g. asserting `Red' as an instance of the concept `Wine' in
 the Wine Ontology \citep{noy2001OntologyDevelopment101} instead of an
 attribute value of `WineColor' that is associated with different classes with
-the relation `hasColor'.
+the relation `hasColor'. Analysing whether LLMs are susceptible to such
+pitfalls when populating ontologies can provide insight into their ability to
+accurately apply a sense distinction in the context of ontologies.
 
 \subsubsection{Attributes:}
 \label{subsubsec:ont-factor-attributes}
