--- a/main.tex
+++ b/main.tex
@@ -185,10 +185,10 @@ ontological relations. Such relations add complexity to the task of ontology
 population, requiring care to avoid asserting new individuals with closely
 related concepts e.g. asserting `Red' as an instance of the concept `Wine' in
 the Wine Ontology \citep{noy2001OntologyDevelopment101} instead of an
-attribute value of `WineColor' that is associated with different classes with
-the relation `hasColor'. Analysing whether LLMs are susceptible to such
-pitfalls when populating ontologies can provide insight into their ability to
-accurately apply a sense distinction in the context of ontologies.
+attribute value of `WineColor' that is associated with different classes of
+wine with the relation `hasColor'. Analysing whether LLMs are susceptible to
+such pitfalls when populating ontologies can provide insight into their
+ability to accurately apply a sense distinction in the context of ontologies.
 
 \subsubsection{Attributes:}
 \label{subsubsec:ont-factor-attributes}
