--- a/main.tex
+++ b/main.tex
@@ -193,6 +193,9 @@ ability to accurately apply a sense distinction in the context of ontologies.
 \subsubsection{Attributes:}
 \label{subsubsec:ont-factor-attributes}
 
+Closely related to non-hierarchical relations, attributes and properties pose
+challenges of ontology sense distinction for LLMs 
+
 \subsubsection{Axioms:}
 \label{subsubsec:ont-factor-axioms}
 
