--- a/main.tex
+++ b/main.tex
@@ -194,7 +194,9 @@ ability to accurately apply a sense distinction in the context of ontologies.
 \label{subsubsec:ont-factor-attributes}
 
 Closely related to non-hierarchical relations, attributes and properties pose
-challenges of ontology sense distinction for LLMs 
+challenges of ontology sense distinction for LLMs enabling investigation of
+their ability to distinguish attributes and data classes from core concepts of
+the domain.
 
 \subsubsection{Axioms:}
 \label{subsubsec:ont-factor-axioms}
