--- a/main.tex
+++ b/main.tex
@@ -169,7 +169,7 @@ string edit-distance-based senses for performing ontology population.
 
 The taxonomy of an ontology is the pivotal backbone structure that defines the
 hierarchy of concepts in a domain. While ontology population is concerned
-primarily with indentifying instances for concepts, it requires understanding
+primarily with identifying instances for concepts, it requires understanding
 the granularity of the taxonomy to identify the correct concept for a new
 individual assertion. LLM-supported ontology population therefore investigates
 whether LLMs are capable of understanding the taxonomy of an ontology and how
