--- a/main.tex
+++ b/main.tex
@@ -171,9 +171,9 @@ The taxonomy of an ontology is the pivotal backbone structure that defines the
 hierarchy of concepts in a domain. While ontology population is concerned
 primarily with identifying instances for concepts, it requires understanding
 the granularity of the taxonomy to identify the correct concept for a new
-individual assertion. LLM-supported ontology population therefore investigates
-whether LLMs are capable of understanding the taxonomy of an ontology and how
-new individuals are to be placed within that taxonomy.
+individual assertion. Through LLM-supported ontology population, we can
+investigate whether LLMs are capable of understanding the taxonomy of an
+ontology and how new individuals are to be placed within that taxonomy.
 
 \subsubsection{Non-hierarchical Relations:}
 \label{subsubsec:ont-factor-other-relations}
