--- a/main.tex
+++ b/main.tex
@@ -201,6 +201,9 @@ the domain.
 \subsubsection{Axioms:}
 \label{subsubsec:ont-factor-axioms}
 
+Axioms are the fundamental underlying principles that define the theory and
+capabilities of an ontology. Axioms of classes, properties, ass
+
 \begin{itemize}
     \item \textbf{Structure}: Ontologies vary greatly in structure depending
 on the complexity and requirements of the domain they model. Variation over
