--- a/main.tex
+++ b/main.tex
@@ -202,7 +202,14 @@ the domain.
 \label{subsubsec:ont-factor-axioms}
 
 Axioms are the fundamental underlying principles that define the theory and
-capabilities of an ontology. Axioms of classes, properties, ass
+capabilities of an ontology. Axioms of logic, classes, individuals, properties
+and classes define what is true in an ontology. Axioms are logical
+abstractions of the behaviour observed by the entities of an ontology in the
+other layers of the Ontology Learning Layer Cake. While ontology population
+itself does not strongly concern itself with the axioms of an ontology,
+behaviour observed over the other factors observed for LLM-supported
+ontology population provide indicators of the compliance of LLM-based
+reasoning with ontology axioms.
 
 \begin{itemize}
     \item \textbf{Structure}: Ontologies vary greatly in structure depending
