--- a/main.tex
+++ b/main.tex
@@ -89,9 +89,9 @@ study} \label{fig:variation-overview}
 \label{subsec:ontology-factors}
 
 Ontologies vary greatly depending on the complexities of the modeled domain
-and the design choices taken by ontology engineers and domain experts . Our
-\citep{noy2001OntologyDevelopment101} categorization of ontology factors draws
-inspiration from the Ontology Layer Cake
+and the design choices taken by ontology engineers and domain experts
+\citep{noy2001OntologyDevelopment101}. Our categorization of ontology factors
+draws inspiration from the Ontology Layer Cake
 \citep{gangemi2005OntologyEvaluationValidation} with additional included
 factors that are not captured by it.
 
