--- a/main.tex
+++ b/main.tex
@@ -91,7 +91,7 @@ study} \label{fig:variation-overview}
 Ontologies vary greatly depending on the complexities of the modeled domain
 and the design choices taken by ontology engineers and domain experts
 \citep{noy2001OntologyDevelopment101}. Our categorization of ontology factors
-draws inspiration from the Ontology Layer Cake
+draws inspiration from the Ontology Learning Layer Cake
 \citep{gangemi2005OntologyEvaluationValidation} with additional included
 factors that are not captured by it.
 
