--- a/main.tex
+++ b/main.tex
@@ -156,9 +156,9 @@ distinction and semantic equivalence
 In terms of ontology population, LLMs are required to apply their lexical
 sense of concept and individual labels to effectively identify
 assertions. Variation in entity label naming highlights the parity between the
-ontological semantics of the entities and the learnt lexical semantics of
-LLMs. This parity is crucial for effective ontology population. As most LLMs
-employ subword tokenization like Byte Pair Encoding (BPE)
+ontological semantics of the entities and the learnt lexical semantics of LLMs
+for their labels. This parity is crucial for effective ontology population. As
+most LLMs employ subword tokenization like Byte Pair Encoding (BPE)
 \citep{sennrich2016NeuralMachineTranslation} for understanding prompts and
 generating texts, evaluation over entity labels highlights whether LLMs are
 able to effectively utilize lexical semantics or resort to more conventional
