--- a/main.tex
+++ b/main.tex
@@ -180,7 +180,7 @@ ontology and how new individuals are to be placed within that taxonomy.
 
 Apart from hierarchical relations, ontologies possess a wide variety of other
 relations that describe other phenomena of a domain. Parthood, associative
-relations and attribute relation properties comprise a large part of
+relations and attribute relation properties comprise a large portion of
 ontological relations. Such relations add complexity to the task of ontology
 population, requiring care to avoid asserting new individuals with closely
 related concepts e.g. asserting `Red' as an instance of the concept `Wine' in
