--- a/main.tex
+++ b/main.tex
@@ -204,7 +204,7 @@ the domain.
 Axioms are the fundamental underlying principles that define the theory and
 capabilities of an ontology. Axioms of logic, classes, individuals, properties
 and classes define what is true in an ontology. They are logical
-abstractions of the behaviour observed by the entities of an ontology in the
+abstractions of the behaviour exhibited by the entities of an ontology in the
 other layers of the Ontology Learning Layer Cake. While ontology population
 itself does not strongly concern itself with the axioms of an ontology,
 behaviour observed over the other factors observed for LLM-supported
