--- a/main.tex
+++ b/main.tex
@@ -209,7 +209,7 @@ other layers of the Ontology Learning Layer Cake. While ontology population
 itself does not strongly concern itself with the axioms of an ontology,
 behaviour observed over the other factors observed for LLM-supported
 ontology population provide indicators of the compliance of LLM-based
-reasoning with ontology axioms.
+reasoning for ontology population with ontology axioms.
 
 \begin{itemize}
     \item \textbf{Structure}: Ontologies vary greatly in structure depending
