--- a/main.tex
+++ b/main.tex
@@ -214,6 +214,12 @@ reasoning for ontology population with ontology axioms.
 \subsection{LLM Factors}
 \label{subsec:llm-factors}
 
+\subsubsection{Type of LLM:}
+\label{subsubsec:llm-factor-type}
+
+\subsubsection{Type of task:}
+\label{subsubsec:llm-factor-task}
+
 \subsection{Interplay of Factors}
 \label{subsec:factor-interplay}
 
