--- a/main.tex
+++ b/main.tex
@@ -220,6 +220,9 @@ reasoning for ontology population with ontology axioms.
 \subsubsection{Type of task:}
 \label{subsubsec:llm-factor-task}
 
+\subsubsection{Type of task:}
+\label{subsubsec:llm-factor-task}
+
 \subsection{Interplay of Factors}
 \label{subsec:factor-interplay}
 
