--- a/main.tex
+++ b/main.tex
@@ -220,8 +220,8 @@ reasoning for ontology population with ontology axioms.
 \subsubsection{Type of task:}
 \label{subsubsec:llm-factor-task}
 
-\subsubsection{Type of task:}
-\label{subsubsec:llm-factor-task}
+\subsubsection{Approach:}
+\label{subsubsec:llm-factor-approach}
 
 \subsection{Interplay of Factors}
 \label{subsec:factor-interplay}
