--- a/main.tex
+++ b/main.tex
@@ -223,6 +223,9 @@ reasoning for ontology population with ontology axioms.
 \subsubsection{Approach:}
 \label{subsubsec:llm-factor-approach}
 
+\subsubsection{Domain Context:}
+\label{subsubsec:llm-factor-domain-contex}
+
 \subsection{Interplay of Factors}
 \label{subsec:factor-interplay}
 
