--- a/main.tex
+++ b/main.tex
@@ -226,6 +226,9 @@ reasoning for ontology population with ontology axioms.
 \subsubsection{Domain Context:}
 \label{subsubsec:llm-factor-domain-context}
 
+\subsubsection{Response Variation:}
+\label{subsubsec:llm-factor-response-variation}
+
 \subsection{Interplay of Factors}
 \label{subsec:factor-interplay}
 
