--- a/main.tex
+++ b/main.tex
@@ -232,5 +232,18 @@ reasoning for ontology population with ontology axioms.
 \subsection{Interplay of Factors}
 \label{subsec:factor-interplay}
 
+\section{Experimentation}
+\label{sec:experimentation}
+
+\subsection{Task Formulation}
+\label{subsec:task-formulation}
+
+\section{Results and Discussion}
+\label{sec:results}
+
+\section{Conclusion}
+\label{sec:conclusion}
+
+
 \bibliography{bibliography}
 \end{document}
