--- a/main.tex
+++ b/main.tex
@@ -262,8 +262,8 @@ $c_1$ in $O$ \newline $\subseteq$ denotes the `subclass of' or `is a' relation
 asserted concept of the term $t$ and,\newline $\Sigma_{c_1}$ is the extension
 \chadded[id=UB, comment={\textbf{ISWC 2}: Added citation to clarify ISWC '25
   reviewer confusion about what and `extension`
-  is.}]{\cite{etzioni2004WebScaleInformation}} of $c_1$ (i.e. set of asserted
-individuals)
+  is.}]{\cite{hlomani2014ApproachesMethodsMetrics}} of $c_1$ (i.e. set of
+asserted individuals)
 \section{Results and Discussion}
 \label{sec:results}
 
