--- a/main.tex
+++ b/main.tex
@@ -260,9 +260,7 @@ where, \newline $d$ is an integer value equal to the depth of the concept
 $c_1$ in $O$ \newline $\subseteq$ denotes the `subclass of' or `is a' relation
 (taxonomical relations of $O$ i.e. $H$); \newline $c_1$ is the directly
 asserted concept of the term $t$ and,\newline $\Sigma_{c_1}$ is the extension
-\chadded[id=UB, comment={\textbf{ISWC 2}: Added citation to clarify ISWC '25
-  reviewer confusion about what and `extension`
-  is.}]{\cite{hlomani2014ApproachesMethodsMetrics}} of $c_1$ (i.e. set of
+\cite{hlomani2014ApproachesMethodsMetrics} of $c_1$ (i.e. set of
 asserted individuals)
 \section{Results and Discussion}
 \label{sec:results}
