--- a/main.tex
+++ b/main.tex
@@ -214,6 +214,8 @@ reasoning for ontology population with ontology axioms.
 \subsection{LLM Factors}
 \label{subsec:llm-factors}
 
+Research into 
+
 \subsubsection{Type of LLM:}
 \label{subsubsec:llm-factor-type}
 
