--- a/main.tex
+++ b/main.tex
@@ -214,7 +214,10 @@ reasoning for ontology population with ontology axioms.
 \subsection{LLM Factors}
 \label{subsec:llm-factors}
 
-
+The capabilities of LLMs in natural language generation and understanding has
+led to immense growth in research about their abilities and limitations. As an
+ever-growing field, factors regularly change with new research. We categorize
+LLM factors based on already well-established factors in LLM research.
 
 \subsubsection{Type of LLM:}
 \label{subsubsec:llm-factor-type}
