--- a/main.tex
+++ b/main.tex
@@ -222,7 +222,9 @@ LLM factors based on already well-established factors in LLM research.
 \subsubsection{Type of LLM:}
 \label{subsubsec:llm-factor-type}
 
-
+The number of available LLMs is growing constantly with HuggingFace
+\cite{wolf2019HuggingfacesTransformersState} now reporting over $2200000$
+models. 
 
 \subsubsection{Type of task:}
 \label{subsubsec:llm-factor-task}
