--- a/main.tex
+++ b/main.tex
@@ -224,7 +224,7 @@ LLM factors based on already well-established factors in LLM research.
 
 The number of available LLMs is growing constantly with HuggingFace
 \cite{wolf2019HuggingfacesTransformersState} now reporting over $2200000$
-models. 
+models. The choice of an LLM can play a 
 
 \subsubsection{Type of task:}
 \label{subsubsec:llm-factor-task}
