--- a/main.tex
+++ b/main.tex
@@ -224,7 +224,14 @@ LLM factors based on already well-established factors in LLM research.
 
 The number of available LLMs is growing constantly with HuggingFace
 \cite{wolf2019HuggingfacesTransformersState} now reporting over $2200000$
-models. The choice of an LLM can play a 
+models. The choice of an LLM is one of the first factors influencing ontology
+population. Choosing an appropriate LLM is governed by several additional
+factors:
+\begin{itemize}
+  \item The emergent abilities of LLMs grows with \textbf{model size}
+    \cite{chalmers2023CouldLargeLanguage}. As a result, larger LLMs are often
+    pr
+\end{itemize}
 
 \subsubsection{Type of task:}
 \label{subsubsec:llm-factor-task}
