--- a/main.tex
+++ b/main.tex
@@ -219,7 +219,7 @@ led to immense growth in research about their abilities and limitations. As an
 ever-growing field, factors regularly change with new research. We categorize
 LLM factors based on already well-established factors in LLM research.
 
-\subsubsection{Type of LLM:}
+\subsubsection{Choice of LLM:}
 \label{subsubsec:llm-factor-type}
 
 The number of available LLMs is growing constantly with HuggingFace
