--- a/main.tex
+++ b/main.tex
@@ -220,7 +220,7 @@ ever-growing field, factors regularly change with new research. We categorize
 LLM factors based on already well-established factors in LLM research.
 
 \subsubsection{Choice of LLM:}
-\label{subsubsec:llm-factor-type}
+\label{subsubsec:llm-factor-choice}
 
 The number of available LLMs is growing constantly with HuggingFace
 \cite{wolf2019HuggingfacesTransformersState} now reporting over $2200000$
