--- a/main.tex
+++ b/main.tex
@@ -233,7 +233,7 @@ factors:
     pr
 \end{itemize}
 
-\subsubsection{Type of task:}
+\subsubsection{Task:}
 \label{subsubsec:llm-factor-task}
 
 \subsubsection{Approach:}
