--- a/main.tex
+++ b/main.tex
@@ -229,8 +229,13 @@ population. Choosing an appropriate LLM is governed by several additional
 factors:
 \begin{itemize}
   \item The emergent abilities of LLMs grows with \textbf{model size}
-    \cite{chalmers2023CouldLargeLanguage}. As a result, larger LLMs are often
-    pr
+    \cite{chalmers2023CouldLargeLanguage}. However, larger LLMs can be
+    difficult to fine-tune due to computational resource restrictions. As a
+    consequence, larger LLMs are often used `as-is' using approaches such as
+    zero-shot, few-shot and Chain-of-Thought prompting. In contrast, smaller
+    LLMs offer the ability to accurately fine-tune on specific tasks which has
+    been shown to perform better than in-context learning strategies
+    \cite{liu2022FewShotParameter}.
 \end{itemize}
 
 \subsubsection{Task:}
