--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,8 @@
 \usepackage[numbers,sort&compress]{natbib}
 \bibliographystyle{splncs04nat}
 
+\usepackage{amsmath}
+
 \begin{document}
 %
 \title{Ontology Population Using LLMs: Which Factors Matter?}
