--- a/main.tex
+++ b/main.tex
@@ -237,7 +237,9 @@ factors:
     zero-shot, few-shot and Chain-of-Thought prompting. In contrast, smaller
     LLMs offer the ability to accurately fine-tune on specific tasks which has
     been shown to perform better than in-context learning strategies
-    \cite{liu2022FewShotParameter}.
+    \cite{liu2022FewShotParameter}. The choice of an LLM for ontology
+    population depending on model size is closely tied with the ability of
+    available models to perform ontology population
 \end{itemize}
 
 \subsubsection{Task:}
