--- a/main.tex
+++ b/main.tex
@@ -239,7 +239,7 @@ factors:
     been shown to perform better than in-context learning strategies
     \cite{liu2022FewShotParameter}. The choice of an LLM for ontology
     population depending on model size is closely tied with the ability of
-    available models to perform ontology population
+    available models to perform ontology population.
 \end{itemize}
 
 \subsubsection{Task:}
