--- a/main.tex
+++ b/main.tex
@@ -225,7 +225,7 @@ LLM factors based on already well-established factors in LLM research.
 \label{subsubsec:llm-factor-choice}
 
 The number of available LLMs is growing constantly with HuggingFace
-\cite{wolf2019HuggingfacesTransformersState} now reporting over $2200000$
+\cite{wolf2019HuggingfacesTransformersState} now reporting over $2.2$ million
 models. The choice of an LLM is one of the first factors influencing ontology
 population. Choosing an appropriate LLM is governed by several additional
 factors:
