--- a/main.tex
+++ b/main.tex
@@ -231,7 +231,8 @@ population. Choosing an appropriate LLM is governed by several additional
 factors:
 \begin{itemize}
   \item The emergent abilities of LLMs grows with \textbf{model size}
-    \cite{chalmers2023CouldLargeLanguage}. However, larger LLMs can be
+    \cite{chalmers2023CouldLargeLanguage}. Thus, it may be often desirable to
+    use larger LLMs for ontology population. However, larger LLMs can be
     difficult to fine-tune due to computational resource restrictions. As a
     consequence, larger LLMs are often used `as-is' using approaches such as
     zero-shot, few-shot and Chain-of-Thought prompting. In contrast, smaller
