--- a/main.tex
+++ b/main.tex
@@ -230,19 +230,20 @@ models. The choice of an LLM is one of the first factors influencing ontology
 population. Choosing an appropriate LLM is governed by several additional
 factors:
 \begin{itemize}
-  \item The emergent abilities of LLMs grows with \textbf{model size}
-    \cite{chalmers2023CouldLargeLanguage}. Thus, it may be often desirable to
-    use larger LLMs for ontology population. However, for domains in the
-    long-tail of the pre-training corpus, such performance may be inadequate
-    \cite{kandpal2023LargeLanguageModels}. Resorting to  larger LLMs can be
-    difficult to fine-tune due to computational resource restrictions. As a
-    consequence, larger LLMs are often used `as-is' using approaches such as
-    zero-shot, few-shot and Chain-of-Thought prompting. In contrast, smaller
-    LLMs offer the ability to accurately fine-tune on specific tasks which has
-    been shown to perform better than in-context learning strategies
-    \cite{liu2022FewShotParameter}. The choice of an LLM for ontology
-    population depending on model size is closely tied with the ability of
-    available models to perform ontology population.
+\item The emergent abilities of LLMs grows with \textbf{model size}
+  \cite{chalmers2023CouldLargeLanguage}. Thus, it may be often desirable to
+  use larger LLMs for ontology population. However, the choice of an LLM based
+  on model size is closely related to other LLM factors. For domains in the
+  long-tail of the pre-training corpus, such performance may be inadequate
+  \cite{kandpal2023LargeLanguageModels}. In such situatResorting to larger
+  LLMs can be difficult to fine-tune due to computational resource
+  restrictions. As a consequence, larger LLMs are often used `as-is' using
+  approaches such as zero-shot, few-shot and Chain-of-Thought prompting. In
+  contrast, smaller LLMs offer the ability to accurately fine-tune on specific
+  tasks which has been shown to perform better than in-context learning
+  strategies \cite{liu2022FewShotParameter}. The choice of an LLM for ontology
+  population depending on model size is closely tied with the ability of
+  available models to perform ontology population.
 \end{itemize}
 
 \subsubsection{Task:}
