--- a/main.tex
+++ b/main.tex
@@ -251,6 +251,15 @@ factors:
   comparing performance of open models against commercial LLMs fosters
   research to bridge the gap in performance across all natural language
   processing (NLP) tasks.
+\item LLMs are capable of handling a wide variety of tasks. However, they do
+  struggle with \textbf{specialization} in reasoning. LLM-supported ontology
+  population requires an LLM to understand and reason over concepts, their
+  hierarchy and assign new instances. Investigation of performance of
+  general-purpose LLMs versus reasoning-specific LLMs highlights the
+  significance of LLM reasoning capabilities to identify correct
+  assertions. It shows whether simple textual pre-training and instruction
+  fine-tuning is sufficient for ontology population or additional reasoning
+  abilities are necessary to accomplish the task.
 
 \end{itemize}
 
