--- a/main.tex
+++ b/main.tex
@@ -275,6 +275,10 @@ the LLM.
 \subsubsection{Approach:}
 \label{subsubsec:llm-factor-approach}
 
+LLMs can be utilized as instruction-following agents, fine-tuned for a
+specific objective or coupled with a data store to facilitate
+data-substantiated text generation.
+
 \subsubsection{Domain Context:}
 \label{subsubsec:llm-factor-domain-context}
 
